# peercastoxide

./: .gitignore  Cargo.toml  log4rs.yml  peercastoxide.code-workspace
pcpproxy/: Cargo.toml
pcpproxy/src/: console.rs  core.rs  features.rs  main.rs  server.rs
pcpproxy/src/console/: console_color.rs  console_utils.rs  printer.rs
pcpproxy/src/core/: http_proxy.rs  listen.rs  pcp_proxy.rs  utils.rs
pcpproxy/src/core/http_proxy/: proxy_for_get_with_tip.rs  proxy_http.rs
pcpproxy/src/core/legacy/: server.rs
pcpproxy/src/core/legacy/console/: console_color.rs  console_utils.rs  printer.rs
pcpproxy/src/core/legacy/server/: pipe.rs  proxy_for_get_channel.rs  proxy_for_get_with_tip.rs  server.rs  sub_servers.rs
pcpproxy/src/core/pcp_proxy/: header.rs  pipe.rs  proxy_for_get_channel.rs  proxy_for_get_with_tip.rs  sub_servers.rs
pcpproxy/src/features/: pcp.rs  real_server_listener.rs
pcpproxy/src/features/console/: printer.rs
pcpproxy/src/features/output/: ndjson.rs
pcpproxy/src/features/pcp/: atom.rs  atom_identifier.rs  atom_stream.rs
pcpproxy/src/features/real_server_listener/: listen_for.rs  proxy_for_get_channel.rs
pcpproxy/src/pcp/: atom.rs  atom_identifier.rs  atom_stream.rs
pcpproxy/src/server/: pipe.rs  proxy_for_get_channel.rs  proxy_for_get_with_tip.rs  server.rs  sub_servers.rs
pcpproxy_gui/: package-lock.json  package.json  tsconfig.json
pcpproxy_gui/src/: App.tsx  index.css  main.tsx
pcpproxy_gui/src-tauri/: Cargo.toml  tauri.conf.json
pcpproxy_gui/src-tauri/src/: features.rs  main.rs
pcpproxy_gui/src-tauri/src/core/: settings.rs
pcpproxy_gui/src-tauri/src/features/: process.rs
pcpproxy_gui/src-tauri/src/features/files/: settings.rs
pcpproxy_gui/src-tauri/src/features/process/: sub_process.rs  subprocess.rs
pcpproxy_gui/src-tauri/src/features/ui/: window.rs
pcpproxy_gui/src/components/: ConnectionsView.tsx  Settings.tsx  SettingsView.tsx  TreesView.tsx
pcpproxy_gui/src/components/trees-view/: parseTree.ts
pcpproxy_gui/src/utils/: dummyData.ts  initFluentUI.tsx
peercastoxide-lib/: Cargo.toml
peercastoxide-lib/src/: lib.rs  pcp.rs  peercast_xml.rs
peercastoxide-lib/src/pcp/: atom.rs  atom_stream.rs
peercastoxide-lib/src/pcp/atom/: atom_stream.rs  child.rs  de.rs  deserializer.rs  future.rs  parent.rs  ser.rs  serializer.rs  unknown.rs  values.rs  well_known_atoms.rs  well_known_identifiers.rs  well_known_protocols.rs
peercastoxide-lib/src/pcp/atom/de/: atom_buf_reader.rs  branch_deserializer.rs  byte_buf_deserializer.rs  children_map_access.rs  grouped_atoms.rs  helpers.rs  root_deserializer.rs  vec_data_seq_access.rs
peercastoxide-lib/src/pcp/atom/de/grouped_atoms/: deserializer.rs  each_atoms_seq_access.rs  seq_access.rs
peercastoxide-lib/src/pcp/atom/deserializer/: atom_buf_reader.rs  branch_deserializer.rs  byte_buf_deserializer.rs  root_deserializer.rs
peercastoxide-lib/src/pcp/atom/deserializer/grouped_atoms/: deserializer.rs  each_atoms_seq_access.rs  seq_access.rs
peercastoxide-lib/src/pcp/atom/future/: atom_stream.rs  child.rs  custom_atom.rs  parent.rs  well_known_atoms.rs  well_known_protocols.rs
peercastoxide-lib/src/pcp/atom/ser/: branch_serializer.rs  count_children.rs  data_serializer.rs  helpers.rs  root_serializer.rs  serialize_parent_struct.rs
peercastoxide-lib/src/pcp/atom/ser/count_children/: branch_serializer.rs  root_serializer.rs
peercastoxide-lib/src/pcp/atom/ser/grouped_atoms/: seq_serializer.rs  serialize_seq.rs  serializer.rs
peercastoxide-lib/src/pcp/atom/serializer/: branch_serializer.rs  data_serializer.rs  grouped_atoms.rs  helpers.rs  root_serializer.rs  serialize_parent_struct.rs
peercastoxide-lib/src/pcp/atom/serializer/count_children/: branch_serializer.rs  root_serializer.rs
peercastoxide-lib/src/pcp/atom/serializer/grouped_atoms/: seq_serializer.rs  serialize_seq.rs  serializer.rs
peercastoxide-lib/src/pcp/atom/unknown/: child.rs  parent.rs
peercastoxide-server/: Cargo.toml
peercastoxide-server/src/: create_xml.rs  main.rs  pcp_server.rs  tracing_helper.rs
