[package]
name = 'pcpproxy'
version = '0.1.0'
authors = ['progre <djyayutto@gmail.com>']
edition = '2018'

[dependencies]
anyhow = '1'
async-recursion = '0.3'
async-trait = '0.1'
bitflags = '1'
clap = '2'
derive-new = '0.5'
futures = '0.3'
log = '0.4'
log4rs = '0.10'
once_cell = '1'
rand = '0.7'
rand_xoshiro = '0.4'
regex = '1'
thiserror = '1'

[dependencies.tokio]
version = '0.3'
features = ['full']
