[package]
name = "pcpproxy"
version = "0.1.0"
authors = ["progre <djyayutto@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
bitflags = "1"
clap = "3"
derive-new = "0.5"
env_logger = "0.9"
futures = "0.3"
getset = "0.1"
log = "0.4"
once_cell = "1"
rand = "0.8"
rand_xoshiro = "0.6"
regex = "1"
serde = "1"
serde_json = "1"
thiserror = "1"

[dependencies.tokio]
version = "1"
features = ["full"]
