[package]
name = "peercastoxide-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-recursion = "1.1.0"
derive-new = "0.6.0"
getset = "0.1.2"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["serde_derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["io-util", "net", "rt", "time"] }
tracing.workspace = true
