[package]
name = "peercastoxide-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-recursion = "1.1.0"
derive-new.workspace = true
getset.workspace = true
regex = "1.10.4"
serde = { workspace = true, features = ["serde_derive"] }
thiserror = "1.0.59"
tokio = { workspace = true, features = ["io-util", "net", "rt", "time"] }
tracing.workspace = true
