[package]
name = "peercastoxide-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bitflags = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
console-subscriber = "0.2.0"
derive-new = "0.6.0"
futures = "0.3.30"
getset = "0.1.2"
once_cell = "1.19.0"
peercastoxide-lib.workspace = true
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = "1.0.198"
thiserror = "1.0.58"
time = "0.3.36"
tokio = { version = "1.37.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing"
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "local-time"
] }
