[package]
name = "peercastoxide-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
console-subscriber = "0.2.0"
derive-new.workspace = true
getset.workspace = true
peercastoxide-lib.workspace = true
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde.workspace = true
time = "0.3.36"
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "tracing"
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "local-time"
] }
