[package]
name = "peercastoxide-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
console-subscriber = "0.2.0"
derive-new.workspace = true
futures = "0.3.30"
getset.workspace = true
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
peercastoxide-lib.workspace = true
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde.workspace = true
time = "0.3.36"
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "tracing"
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "local-time"
] }
