[package]
name = "app"
version = "0.1.0"
description = ""
authors = ["Progre"]
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
erased-serde = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all"] }
tauri-runtime = "0.5"
tokio = { version = "1.17", features = [
  "macros",
  "net",
  "process",
  "rt",
  "sync",
  "time"
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
